# FluxTrade

./: .gitignore  CMakeLists.txt  PERFORMANCE.md  README.md
.cache/clangd/index/: account_state.hpp.427691551D38DA40.idx  ask_book.hpp.E68BFB97A2E9F897.idx  base_event.hpp.7027FB13B4696B26.idx  bid_book.hpp.5D5909B47DB29BE6.idx  checksum.hpp.DD8B2D30915DF0E7.idx  circuit_breaker.hpp.D4C74FD6D668B1C8.idx  client_connection.hpp.D177356F21FE8FCB.idx  clock.hpp.047DB7575A3411CB.idx  concepts.hpp.F90DFAB32256DD48.idx  credit_manager.cpp.773227ADBA138820.idx  credit_manager.hpp.A2042CEDA12890B3.idx  dependency_resolver.cpp.E8D1B4AD28B2371F.idx  dependency_resolver.hpp.FAE3DBB0DD4DA9BD.idx  dependency_resolver_tests.cpp.9C8556E473381D06.idx  disk_journal.hpp.C12756A10D25E52B.idx  dispatcher.hpp.F353924C4E9F2832.idx  domain_benchmark.cpp.058FDFD0ABBEFF8A.idx  domain_tests.cpp.7F96B6FD7BDEEE54.idx  duplicate_validator.hpp.F3AC8A15574ABCE4.idx  engine_manager.hpp.D009202DEA5084FF.idx  event_benchmark.cpp.DB01D63786C4DBB0.idx  event_bus.hpp.5EC1CA6175A5FEA1.idx  event_bus_tests.cpp.F9FD60DA2B392E97.idx  event_header.hpp.BE54C64BC4C188A8.idx  event_id.hpp.9B3092A6A255639B.idx  event_tests.cpp.1AE3F30DB5443401.idx  event_traits.hpp.915C4FE6DC8167F1.idx  event_version.hpp.E03F38EF153B4002.idx  exchange.cpp.2474B10B50AEE769.idx  exchange.hpp.44A44F06ED8714C1.idx  exchange_simulator.hpp.5CAE5D7F4D924269.idx  exchange_tests.cpp.F3CE814CE3DF4832.idx  execution.hpp.7FDEF19AB612E734.idx  execution_context.hpp.C5F5A7EA39FDC982.idx  execution_report.hpp.9CC47076CE12FE0F.idx  execution_type.hpp.50B64A06A7DC2189.idx  expected.hpp.69BCB578748F6B30.idx  fat_finger_validator.hpp.8674EB39EBC271DD.idx  fill.hpp.4761DCF9B88ADF23.idx  gateway.cpp.A10C64E081A9C433.idx  (+88 more)
benchmarks/: CMakeLists.txt
benchmarks/domain/: domain_benchmark.cpp
benchmarks/events/: event_benchmark.cpp
benchmarks/gateway/: gateway_benchmark.cpp
benchmarks/matching/: matching_engine_benchmark.cpp  order_book_benchmark.cpp
benchmarks/persistence/: persistence_benchmarks.cpp
benchmarks/queue/: ring_buffer_benchmark.cpp
benchmarks/risk/: risk_engine_benchmark.cpp
common/: CMakeLists.txt
common/include/common/: expected.hpp  object_pool.hpp  ring_buffer.hpp  thread_pinning.hpp  types.hpp
config/: CMakeLists.txt
core/: CMakeLists.txt
docs/: ARCHITECTURE.md  DOMAIN.md  EVENTS.md  EXCHANGE.md  GATEWAY.md  KERNEL.md  MATCHING_ENGINE.md  ORDER_BOOK.md
docs/ADR/: ADR-001_one_thread_per_symbol.md  ADR-002_event_driven_architecture.md  ADR-003_lock_free_queues.md  ADR-004_object_pool.md  ADR-005_kernel_architecture.md  ADR-006_kernel_lifecycle.md
domain/: CMakeLists.txt
domain/include/domain/: concepts.hpp  execution.hpp  execution_type.hpp  fill.hpp  ids.hpp  order.hpp  order_flags.hpp  order_status.hpp  order_type.hpp  order_view.hpp  price.hpp  price_level.hpp  quantity.hpp  reject_reason.hpp  side.hpp  time_in_force.hpp  trade.hpp  validators.hpp
events/: CMakeLists.txt
events/include/events/: base_event.hpp  event_header.hpp  event_id.hpp  event_traits.hpp  event_version.hpp  market_events.hpp  order_events.hpp  risk_events.hpp  serialization.hpp  system_events.hpp  trade_events.hpp
exchange/: CMakeLists.txt
exchange/include/exchange/: dispatcher.hpp  engine_manager.hpp  exchange.hpp  outbound_report.hpp
exchange/src/: exchange.cpp
execution/: CMakeLists.txt
gateway/: CMakeLists.txt
gateway/include/gateway/: client_connection.hpp  gateway.hpp  order_command.hpp  packet_decoder.hpp  packet_encoder.hpp  protocol.hpp  sequence_manager.hpp  session_manager.hpp  simulation_transport.hpp  tcp_transport.hpp  transport.hpp
gateway/src/: gateway.cpp
kernel/: CMakeLists.txt
kernel/include/kernel/: clock.hpp  dependency_resolver.hpp  event_bus.hpp  health_monitor.hpp  kernel.hpp  module.hpp  service_registry.hpp  thread_manager.hpp
kernel/src/: dependency_resolver.cpp  health_monitor.cpp  kernel.cpp  thread_manager.cpp
marketdata/: CMakeLists.txt
matching/: CMakeLists.txt
matching/include/matching/: exchange_simulator.hpp  execution_context.hpp  execution_report.hpp  matching_engine.hpp  matching_result.hpp  matching_statistics.hpp  trade_builder.hpp
matching/order_book/: ask_book.hpp  bid_book.hpp  intrusive_list.hpp  order_book.cpp  order_book.hpp  order_lookup.hpp  price_level.hpp  price_level_index.hpp
matching/src/: matching_engine.cpp  trade_builder.cpp
metrics/: CMakeLists.txt
monitoring/: CMakeLists.txt
network/: CMakeLists.txt
persistence/: CMakeLists.txt
persistence/include/persistence/: checksum.hpp  disk_journal.hpp  memory_journal.hpp  metadata_manager.hpp  replay_engine.hpp  snapshot_reader.hpp  snapshot_writer.hpp  wal_record.hpp
replay/: CMakeLists.txt
risk/: CMakeLists.txt
risk/docs/: RISK_ENGINE.md
risk/include/risk/: account_state.hpp  circuit_breaker.hpp  credit_manager.hpp  duplicate_validator.hpp  fat_finger_validator.hpp  kill_switch.hpp  margin_manager.hpp  position_state.hpp  price_band_validator.hpp  rate_limit_validator.hpp  risk_context.hpp  risk_engine.hpp  risk_limits.hpp  risk_result.hpp  risk_statistics.hpp  self_trade_prevention.hpp
risk/src/: credit_manager.cpp  margin_manager.cpp  risk_engine.cpp
router/: CMakeLists.txt
scheduler/: CMakeLists.txt
simulator/: CMakeLists.txt
storage/: CMakeLists.txt
tests/: CMakeLists.txt
tests/common/: object_pool_tests.cpp  ring_buffer_tests.cpp
tests/domain/: domain_tests.cpp
tests/events/: event_tests.cpp
tests/exchange/: exchange_tests.cpp
tests/gateway/: gateway_tests.cpp
tests/kernel/: dependency_resolver_tests.cpp  event_bus_tests.cpp  kernel_tests.cpp  thread_manager_tests.cpp
tests/matching/: matching_engine_tests.cpp  order_book_tests.cpp
tests/persistence/: replay_tests.cpp  snapshot_tests.cpp  wal_tests.cpp
tests/risk/: risk_engine_tests.cpp
